site sor fabricio

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive website food</title>
+        <title>My Yaki Sushi</title>
     </head>
     <body>
 
@@ -22,7 +22,7 @@
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
             <nav class="nav bd-container">
-                <a href="#" class="nav__logo">Tasty</a>
+                <a href="#" class="nav__logo">My Yaki</a>
 
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
@@ -47,9 +47,8 @@
             <section class="home" id="home">
                 <div class="home__container bd-container bd-grid">
                     <div class="home__data">
-                        <h1 class="home__title">Tasty food</h1>
-                        <h2 class="home__subtitle">Try the best food of <br> the week.</h2>
-                        <a href="#" class="button">View Menu</a>
+                        <h1 class="home__title">My Yaki</h1>
+                        <h2 class="home__subtitle">Prove o melhor yaki da <br> sua vida.</h2>
                     </div>
     
                     <img src="assets/img/home.png" alt="" class="home__img">
@@ -385,27 +384,16 @@
                         <span class="menu__detail">Delicious dish</span>
                         <span class="menu__preci">$9.50</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-                    </div>
-                </div>
-            </section>
+                        <br>
+                    </div> 
+                    <div class="home__data">
+                <a href="Menu.html" class="button">Ver mais</a>
+            </div>
+        </div>
+        </section>
 
             <!--===== APP =======-->
-            <section class="app section bd-container">
-                <div class="app__container bd-grid">
-                    <div class="app__data">
-                        <span class="section-subtitle app__initial">App</span>
-                        <h2 class="section-title app__initial">App is aviable</h2>
-                        <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more.</p>
-                        <div class="app__stores">
-                            <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
-                            <a href="#"><img src="assets/img/app2.png" alt="" class="app__store"></a>
-                        </div>
-                    </div>
-
-                    <img src="assets/img/movil-app.png" alt="" class="app__img">
-                </div>
-            </section>
-
+            
             <!--========== CONTACT US ==========-->
             <section class="contact section bd-container" id="contact">
                 <div class="contact__container bd-grid">
@@ -416,7 +404,7 @@
                     </div>
 
                     <div class="contact__button">
-                        <a href="#" class="button">Contact us now</a>
+                        <a href="" class="button" type="button">Contact us now</a>
                     </div>
                 </div>
             </section>
@@ -446,7 +434,7 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Information</h3>
+                    <h3 class="footer__title">Informações</h3>
                     <ul>
                         <li><a href="#" class="footer__link">Event</a></li>
                         <li><a href="#" class="footer__link">Contact us</a></li>
@@ -456,17 +444,16 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Adress</h3>
+                    <h3 class="footer__title">Endereço</h3>
                     <ul>
-                        <li>Lima - Peru</li>
-                        <li>Jr Union #999</li>
-                        <li>999 - 888 - 777</li>
-                        <li>tastyfood@email.com</li>
+                        <li>Joinville - Brasil</li>
+                        <li>R. XV de novembro, Galeria Marcos Grossenbacher- sala 8.</li>
+                        <li>(47) 3043-6136</li>
                     </ul>
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; 2020 Bedimcode. All right reserved</p>
+            <p class="footer__copy">&#169; 2024 Andrei Dietrich. Todos os direitos Reservados.</p>
         </footer>
 
         <!--========== SCROLL REVEAL ==========-->
